--- a/index.html
+++ b/index.html
@@ -7,22 +7,14 @@
 </head>
 
 <body>
-	
 	<div class="header"><h1>Connect the Dots</h1></div>
     <div class="container">
-    	<svg class="line" height="500" width="700">
-		
-        </svg>
-    	<!--<canvas id="canvas" width="700" height="500">
-    This text is displayed if your browser does not support HTML5 Canvas.
-   		</canvas>-->
-        
+    	<svg class="line" height="500" width="700"></svg>
     </div>
     <a style="display:block" href="#">
 			<a href="index.html"><div class="next disabled"><p>Next Question</p></div></a>
     </a>
-	<script src="jquery-1.11.3.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
-    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js"></script>-->
 </body>
 </html>
